@@ -1,3 +1,8 @@
+2004-01-05  Jacob Smullyan  <smulloni@bracknell.smullyan.org>
+
+	* pylibs/formlib/validates.py (STATELIST): added Arkansas, which
+	was missing for some reason, and fixed the state code for Arizona.
+
 2003-12-29  Jacob Smullyan  <smulloni@bunbury.smullyan.org>
 
 	* pylibs/AE/CacheTag.py: now use skunk.date.timeutil rather than
